--- a/Movie-Watch-list-Tracker/app/templates/add.html
+++ b/Movie-Watch-list-Tracker/app/templates/add.html
@@ -89,7 +89,7 @@
       </div>
     </tr>
     <tr>
-      <th colspan="3"><input type="submit" value="Update Movie" /></th>
+      <th colspan="3"><input type="submit" value="Edit Movie" /></th>
     </tr>
   </form>
 </table>
