--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
             <td id="index_td_movie" class="to_capitalize" >${movie.movie}</td>
             <td id="index_td_tv" >${label_w} ${label_d}</td>
             <td id="index_td_label" class="to_capitalize" >${movie.year == '0000' ? "-" : movie.year}</td>
-            <td id="index_td_year" class="to_capitalize" >${movie.series ? "✓" : "-"}</td>
+            <td id="index_td_year" class="to_capitalize" >${movie.series ? "✓" : "✖️"}</td>
             <td id="index_td_dropdown">
                 <div class="dropdown">
                     <button>•••</button>
