--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,14 +15,14 @@
     <div class="base_container">
       <header id="base_header_">
         <ul id="header_ul">
-          <li id="base_header_ul_li_home"><a href="/">Home</a></li>
-          <li id="base_header_ul_li_add"><a href="/add">Add a Movie</a></li>
-          <li id="base_header_ul_li_update"> <a href="/#search_query">Search</a> </li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/add">Add a Movie</a></li>
+          <li> <a href="/#search-query">Search</a> </li>
           <!-- <a id="log_out_button" href="#" class="logout-btn" >Log Out</a> -->
-          <li id="base_header_ul_li_logout">
+          <li id="base-header-ul-li-logout">
           <form method="post" action="/log_out">
-            <button type="submit" id="log_out">LOG OUT</button>
-            <input type="text" name="log_out" value="true" hidden />
+            <button type="submit" id="log-out">LOG OUT</button>
+            <input type="text" name="log-out" value="true" hidden />
           </form>
           </li>
         </ul>
