--- a/app/templates/log_out.html
+++ b/app/templates/log_out.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% block title %}Logged Out Page{% endblock %} {%
-block head %}
+{% extends 'base.html' %} 
+{% block title %}Alham - Logged Out Page{% endblock %} 
+{% block head %}
 <style>
     .container {
         display: flex; 
