--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %} {% block title %}Alham - Edit{% endblock %} 
+{% extends 'base.html' %} 
+{% block title %}Alham  - Edit{% endblock %} 
 {% block head %}
 <style>
-
   input[type="checkbox"] {
     width: 40px;
     height: 40px;
@@ -17,7 +17,7 @@
   }
 
   input[type="text"] {
-    font-size:large;
+    font-size: large;
     color: #2b6961;
     font-weight: bold;
     padding: 8px 20px;
@@ -37,10 +37,8 @@
   input[type="submit"]:hover {
     background-color: #45a396;
   }
-
 </style>
-{% endblock %} 
-{% block body %}
+{% endblock %} {% block body %}
 
 <h1>Edit the Movie</h1>
 
@@ -52,9 +50,15 @@
   </tr>
   <form method="GET" action="/edit/data/{{ movies.index }}">
     <tr>
-      <td> <input id="td_movie" type="text" name="movie_name" value="{{ movies.movie.title() }}" required autofocus /> </td>
-      <td> <input type="number" name="year" value="{{ movies.year }}" min="1800" max="2030" required /> </td>
-      <td> <input type="checkbox" name="tv_series" {% if movies.series %}checked{% endif %} /> </td>
+      <td>
+        <input id="td-movie" type="text" name="movie_name" value="{{ movies.movie.title() }}" required autofocus />
+      </td>
+      <td>
+        <input type="number" name="year" value="{{ movies.year }}" min="1800" max="2030" required />
+      </td>
+      <td>
+        <input type="checkbox" name="tv_series" {% if movies.series %}checked{% endif %} />
+      </td>
       <input type="hidden" name="index" value="{{ movies.index }}" />
     </tr>
     <tr>
@@ -62,9 +66,9 @@
     </tr>
   </form>
 </table>
-<br>
-<br>
-<br>
-<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image">
+<br />
+<br />
+<br />
+<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image"> 
 
 {% endblock %}
