--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,6 +1,7 @@
-{% extends 'base.html' %}
-{% block title %}Alham - Add{% endblock %}
- {% block head %}
+{% extends 'base.html' %}  <!-- type: ignore -->
+{% block title %}Alham - Add{% endblock %}  <!-- type: ignore -->
+ {% block head %}  <!-- type: ignore -->
+
 <style>
   th input[type="checkbox"] {
     width: 40px;
