--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,9 @@
 
 
   <body>
-    <div class="base_container">
-      <header id="base_header_">
-        <ul id="header_ul">
+    <div class="base-container">
+      <header id="base-header-">
+        <ul id="header-ul">
           <li><a href="/">Home</a></li>
           <li><a href="/add">Add a Movie</a></li>
           <li> <a href="/#search-query">Search</a> </li>
