--- a/app/templates/log_out.html
+++ b/app/templates/log_out.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %} 
-{% block title %}Alham - Logged Out Page{% endblock %} 
-{% block head %}
+{% extends 'base.html' %}  <!-- type: ignore -->
+{% block title %}Alham - Logged Out Page{% endblock %}  <!-- type: ignore -->
+{% block head %}  <!-- type: ignore -->
 <style>
     .container {
         display: flex; 
