--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,27 +1,34 @@
 header {
-  background-color: #333333;
+  background-color: #333;
   padding: 10px 0;
   text-align: center;
 }
 
-#header_ul {
+#header-ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-#header_ul li {
+#header-ul li {
   display: inline;
   margin-right: 20px;
 }
 
-#header_ul li a {
-  color: #4ec9b0;
+.dropdown-content a {
+  color: #fff;
+  padding: 12px 16px;
   text-decoration: none;
+  display: block;
 }
 
-#base_div {
-  margin: 10px;
+.dropdown-content a:hover {
+  background-color: #4ec9b0;
+}
+
+#header-ul li a {
+  color: #4ec9b0;
+  text-decoration: none;
 }
 
 h1 {
@@ -33,8 +40,9 @@ h1 {
   padding: 8px 20px;
   background-color: #4fc9b1;
   border: none;
-  color: #ffffff;
+  color: #fff;
   cursor: pointer;
+
   /* margin-bottom: 10px; */
 }
 
@@ -59,21 +67,10 @@ h1 {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #333333;
+  background-color: #333;
   min-width: 160px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 #00000033;
   z-index: 1;
-}
-
-.dropdown-content a {
-  color: #ffffff;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #4ec9b0;
 }
 
 .dropdown:hover .dropdown-content {
@@ -82,12 +79,12 @@ h1 {
 
 .dropdown button {
   background-color: transparent;
-  color: #ffffff;
+  color: #fff;
   border: none;
   cursor: pointer;
 }
 
-.to_capitalize {
+.to-capitalize {
   text-transform: capitalize;
 }
 
@@ -118,16 +115,16 @@ form input[type="text"] {
   margin-right: 10px;
 }
 
-form button[type="submit"]:hover {
-  background-color: #317e6f;
-}
-
 form button[type="submit"] {
   padding: 8px 20px;
   background-color: #4fc9b1;
   border: none;
-  color: #ffffff;
+  color: #fff;
   cursor: pointer;
+}
+
+form button[type="submit"]:hover {
+  background-color: #317e6f;
 }
 
 table {
@@ -158,7 +155,7 @@ table tr:last-child {
   border-bottom: none;
 }
 
-#index_td_movie {
+#index-td-movie {
   text-align: left;
 }
 
@@ -167,15 +164,15 @@ table tr:last-child {
 }
 
 .label-pic {
-  width: 25px;
+  width: 25px;  /* type: ignore */
 }
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  align-items: center;
 }
+
 .container img {
   margin-right: 2px;
   width: 25px;
@@ -193,6 +190,6 @@ table tr:last-child {
 }
 
 input[type="checkbox"] {
-    width: 25px;
-    height: 25px;
+  width: 25px;
+  height: 25px;
 }
