--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %} 
-{% block title %}Alham  - Edit{% endblock %} 
-{% block head %}
+{% extends 'base.html' %}  <!-- type: ignore -->
+{% block title %}Alham  - Edit{% endblock %}  <!-- type: ignore -->
+{% block head %}  <!-- type: ignore -->
 <style>
   input[type="checkbox"] {
     width: 40px;
