--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-{% block title %} Alham - Search {% endblock %} 
-{% block body %}
+{% extends 'base.html' %}  <!-- type: ignore -->
+{% block title %} Alham - Search {% endblock %}  <!-- type: ignore --> 
+{% block body %}  <!-- type: ignore -->
 
 <h1>Search</h1>
 
@@ -31,7 +31,7 @@
 
         movie_div.innerHTML += `<tr>
           <td>${id}</td>
-          <td class="to_capitalize" >${movie.movie}</td>
+          <td class="to-capitalize " >${movie.movie}</td>
           <td>${movie.year == '0000' ? "-" : movie.year}</td>
           <td>${movie.series ? "✓" : "✖️"}</td>
           <td>
