--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}  <!-- type: ignore -->
-{% block title %}Alham - Add{% endblock %}  <!-- type: ignore -->
- {% block head %}  <!-- type: ignore -->
+{% extends 'base.html' %}  <!-- ignore -->
+{% block title %}Alham - Add{% endblock %}  <!-- ignore -->
+ {% block head %}  <!-- ignore -->
 
 <style>
   th input[type="checkbox"] {
