--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="base-container">
-      <header id="base-header-">
+      <header id="base-header-i">
         <ul id="header-ul">
           <li><a href="/">Home</a></li>
           <li><a href="/add">Add a Movie</a></li>
