--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}  <!-- type: ignore -->
-{% block title %}Alham - Home{% endblock %}  <!-- type: ignore -->
-{% block head %}  <!-- type: ignore -->
+{% extends 'base.html' %}  <!-- ignore -->
+{% block title %}Alham - Home{% endblock %}  <!--  ignore -->
+{% block head %}  <!--  ignore -->
 <script>
   let movies;
   let defaultList;
