--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -69,7 +69,7 @@ h1 {
   position: absolute;
   background-color: #333;
   min-width: 160px;
-  box-shadow: 0 8px 16px 0 #00000033;
+  box-shadow: 0 8px 16px 0 #0003;
   z-index: 1;
 }
 
