--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}  <!-- type: ignore -->
-{% block title %}Alham  - Edit{% endblock %}  <!-- type: ignore -->
-{% block head %}  <!-- type: ignore -->
+{% extends 'base.html' %}  <!-- ignore -->
+{% block title %}Alham  - Edit{% endblock %}  <!-- ignore -->
+{% block head %}  <!-- ignore -->
 <style>
   input[type="checkbox"] {
     width: 40px;
