--- a/app/templates/log_out.html
+++ b/app/templates/log_out.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}  <!-- type: ignore -->
-{% block title %}Alham - Logged Out Page{% endblock %}  <!-- type: ignore -->
-{% block head %}  <!-- type: ignore -->
+{% extends 'base.html' %}  <!-- ignore -->
+{% block title %}Alham - Logged Out Page{% endblock %}  <!-- ignore -->
+{% block head %}  <!-- ignore -->
 <style>
     .container {
         display: flex; 
