--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}  <!-- type: ignore -->
-{% block title %} Alham - Search {% endblock %}  <!-- type: ignore --> 
-{% block body %}  <!-- type: ignore -->
+{% extends 'base.html' %}  <!-- ignore -->
+{% block title %} Alham - Search {% endblock %}  <!-- ignore --> 
+{% block body %}  <!-- ignore -->
 
 <h1>Search</h1>
 
