Code Quality Checking.

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}  <!-- ignore -->
 {% block title %}Alham - Add{% endblock %}  <!-- ignore -->
  {% block head %}  <!-- ignore -->
