--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}  <!-- ignore -->
 {% block title %}Alham  - Edit{% endblock %}  <!-- ignore -->
 {% block head %}  <!-- ignore -->
