Code Quality Checking.

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}  <!-- ignore -->
-{% block title %}Alham - Add{% endblock %}  <!-- ignore -->
- {% block head %}  <!-- ignore -->
+{% extends 'base.html' %}
+{% block title %}Alham - Add{% endblock %}
+ {% block head %}
 
 <style>
   th input[type="checkbox"] {
