--- a/app/templates/log_out.html
+++ b/app/templates/log_out.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}  <!-- ignore -->
-{% block title %}Alham - Logged Out Page{% endblock %}  <!-- ignore -->
-{% block head %}  <!-- ignore -->
+{% extends 'base.html' %}
+{% block title %}Alham - Logged Out Page{% endblock %}
+{% block head %}
 <style>
     .container {
         display: flex; 
