--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}  <!-- ignore -->
-{% block title %}Alham  - Edit{% endblock %}  <!-- ignore -->
-{% block head %}  <!-- ignore -->
+{% extends 'base.html' %}
+{% block title %}Alham  - Edit{% endblock %}
+{% block head %}
 <style>
   input[type="checkbox"] {
     width: 40px;
@@ -71,5 +71,5 @@
 <br />
 <br />
 <img src="{{ url_for('static', filename="img/edit.png") }}" alt="image"> 
-
+<br/>
 {% endblock %}
