--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}  <!-- ignore -->
-{% block title %}Alham - Home{% endblock %}  <!--  ignore -->
-{% block head %}  <!--  ignore -->
+{% extends 'base.html' %}
+{% block title %}Alham - Home{% endblock %}
+{% block head %}
 <script>
   let movies;
   let defaultList;
