--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}  <!-- ignore -->
-{% block title %} Alham - Search {% endblock %}  <!-- ignore --> 
-{% block body %}  <!-- ignore -->
+{% extends 'base.html' %}
+{% block title %} Alham - Search {% endblock %}
+{% block body %}
 
 <h1>Search</h1>
 
@@ -69,5 +69,6 @@
 <br>
 <br>
 <img src="{{ url_for('static', filename="img/search.png") }}" alt="image">
+<br>
 
 {% endblock %}
