Some changes to increase the code quality.

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -122,7 +122,7 @@
 <br>
 <br>
 
-<img src="{{ url_for('static', filename="img/add.png") }}" alt="image">
+<img src="{{ url_for('static', filename="img/add.png") }}" alt="image">  <!-- htmlhint off spec-char-escape -->
 
 <script>
   const series = document.getElementById('td-series');
