--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -70,6 +70,6 @@
 <br />
 <br />
 <br />
-<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image"> 
+<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image">  <!-- htmlhint off spec-char-escape -->
 <br/>
 {% endblock %}
