--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -68,7 +68,7 @@
 <br>
 <br>
 <br>
-<img src="{{ url_for('static', filename="img/search.png") }}" alt="image">
+<img src="{{ url_for('static', filename="img/search.png") }}" alt="image">  <!-- htmlhint off spec-char-escape -->
 <br>
 
 {% endblock %}
