--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -31,7 +31,7 @@
     padding: 8px 20px;
     background-color: #4ec9b0;
     border: none;
-    color: #ffffff;
+    color: #fff;
     cursor: pointer;
   }
 
@@ -70,6 +70,7 @@
 <br />
 <br />
 <br />
-<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image">  <!-- htmlhint off spec-char-escape -->
+<img src="{{ url_for('static', filename="img/edit.png") }}" alt="image">
 <br/>
+
 {% endblock %}
