Added a action file to push to docker hub

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -88,7 +88,7 @@
 
     <tr id="upcoming" style="display: none;">
       <td colspan="3" style="display: grid; grid-template-columns: 1fr auto 1fr; grid-gap: 2px "> 
-        <input id="upcoming-checkbox" type="checkbox" name="upcoming" value="true">
+        <input id="upcoming-checkbox" type="checkbox" name="future_release" value="true">
         <label for="upcoming-checkbox">Upcoming releases</label>
       </td>
     </tr>
